[package]
name = "rw-exact-ext"
description = "Extension of std::io to read and write data types with exact amounts of bytes."
license = "MIT"
repository = "https://github.com/conqp/rw-exact-ext"
keywords = ["read", "write", "extension", "trait", "number"]
categories = ["rust-patterns"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.17", optional = true }
